--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <button class="actionBtn" id="invBtn" onClick="toggleDivVis('inventoryDiv');" >Inventory</button>
       <button class="actionBtn" id="shBtn" onClick="toggleDivVis('shopDiv');" >Shop</button>
     </div>
-    <div id="talkDiv" class="hidden">
+    <div id="talkDiv" class="hidden">TALK
     </div>
-    <div id="inventoryDiv" class="hidden">     
+    <div id="inventoryDiv" class="hidden">INVENTORY   
     </div>
-    <div id="shopDiv" class="hidden">
+    <div id="shopDiv" class="hidden">SHOP
     </div>
     <div id="gameDiv">
       <canvas id="game" width="740px" height="280px"></canvas>
